# socket.io-poco

include/: SIOClient.h  SIOClientImpl.h  SIOClientRegistry.h  SIOEventRegistry.h  SIOEventTarget.h  SIONotificationHandler.h  SIONotifications.h  SIOPacket.h
src/: CMakeLists.txt  SIOClient.cpp  SIOClientImpl.cpp  SIOClientRegistry.cpp  SIOEventRegistry.cpp  SIONotificationHandler.cpp  SIOPacket.cpp
src/examples/: CMakeLists.txt  TestEndpointTarget.cpp  TestEndpointTarget.h  TestTarget.cpp  TestTarget.h  main.cpp
