CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(socketiopoco)
#
# Project Output Paths
#
SET(MAINFOLDER ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/../bin")
SET(LIBRARY_OUTPUT_PATH "${MAINFOLDER}/../lib")

#Third party
SET(THIRD_PARTY "${MAINFOLDER}/../third_party/local")
SET(THIRD_PARTY_INCLUDE "${THIRD_PARTY}/include")
SET(THIRD_PARTY_LIB "${THIRD_PARTY}/lib")


FILE(GLOB SIOPOCO_SOURCES *.cpp)

INCLUDE_DIRECTORIES("${MAINFOLDER}/../include" /usr/local/include "${THIRD_PARTY_INCLUDE}")

LINK_DIRECTORIES(/usr/local/lib "${THIRD_PARTY_LIB}")
ADD_LIBRARY(socketiopoco_static STATIC ${SIOPOCO_SOURCES})
ADD_LIBRARY(socketiopoco_shared SHARED ${SIOPOCO_SOURCES})
TARGET_LINK_LIBRARIES(socketiopoco_static PocoFoundation PocoJSON PocoNet PocoNetSSL)
TARGET_LINK_LIBRARIES(socketiopoco_shared PocoFoundation PocoJSON PocoNet PocoNetSSL)

INSTALL(TARGETS socketiopoco_static DESTINATION lib)
INSTALL(TARGETS socketiopoco_shared DESTINATION lib)
INSTALL(
		DIRECTORY ${MAINFOLDER}/../include
		DESTINATION .
		COMPONENT Devel
		PATTERN ".svn" EXCLUDE
)


OPTION(COMPILE_EXAMPLES "COMPILE_EXAMPLES" OFF)

IF(COMPILE_EXAMPLES)
	ADD_SUBDIRECTORY(examples)
ENDIF(COMPILE_EXAMPLES)
